manifests/overlays/nm-inference/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: neural-magic-deepsparse
spec:
  replicas: 1
  selector:
    service: neural-magic-deepsparse
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: aicoe-gather-metrics-pipeline
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: neural-magic-deepsparse
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: aicoe-gather-metrics-pipeline
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      containers:
        - name: neural-magic-deepsparse
          image: quay.io/thoth-station/neural-magic-deepsparse
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
  test: false
