manifests/overlays/nm-inference/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: neural-magic-deepsparse
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: neural-magic-deepsparse
