manifests/overlays/nm-inference/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neural-magic-deepsparse
spec:
  to:
    kind: Service
    name: neural-magic-deepsparse
